# botpporojones_v2

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README  README.md  SECURITY.md  a.txt  aitextgen.tokenizer.json  cookiecutter-config-file.yml  pickle_store  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
botpporojones_v2/: __init__.py  __main__.py
docker/: README.md
tests/test_bopporojones_v2/: __main__test.py
tests/test_example/: test_hello.py
