# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "botpporojones_v2"
version = "0.1.1"
description = "In which I rework my old discord bot to be better, faster, more efficient, and have better commands."
readme = "README.md"
authors = [
  "botpporojones_v2 <sapporojones@gmail.com>"
]
license = "MIT"
repository = "https://github.com/sapporojones@gmail.com/botpporojones_v2"
homepage = "https://github.com/sapporojones@gmail.com/botpporojones_v2"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"botpporojones_v2" = "botpporojones_v2.__main__:app"

[tool.poetry.dependencies]
python = "^3.7"
importlib_metadata = {version = "^4.5.0", python = "<3.8"}
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^10.4.0"
requests = "^2.25.1"
praw = "^7.3.0"
discord = "^1.7.3"
python-dotenv = "^0.18.0"
pytz = "^2021.1"
pydocstyle = "^6.1.1"
types-pytz = "^2021.1.0"
types-requests = "^2.25.0"

[tool.poetry.dev-dependencies]
darglint = "^1.5.8"
isort = "^5.9.1"
pyupgrade = "^2.7.4"
black = "^21.6b0"
mypy = "^0.910"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pylint = "^2.12.2"
pydocstyle = "^6.1.1"
pre-commit = "^2.9.3"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
